--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -17,8 +16,14 @@
   --breakpoint-mlg: 880px;
 }
 
+@font-face {
+  font-family: "Medium"; /*Can be any text*/
+  src: local("PoppinsMedium"),
+    url("./assets/Fonts/Poppins/Poppins-Medium.ttf") format("truetype");
+}
+
 body {
-  font-family: var(--font-family);
+  font-family: "Medium";
   background-color: var(--background-color);
   color: var(--text-color);
   margin: 0;
